discussion/kv_engine/173472/173472_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Continue/Cancel RangeScan on an I/O task

Add RangeScanContinueTask (READER) which is a task to be scheduled
in response to scan continue or cancel requests.

For continue, the "scanning" occurs on the I/O task.
For cancel, the destruct (close of snapshot) occurs on the I/O task.

In this commit the task "model" is intentionally simple, 1 new task
created per continue or cancel. The focus of the commit is the
scan continue/cancel logic and a future commit will look to improve
the task model by limiting the tasks and/or limiting the concurrency.

Change-Id: I96daac2c6b81da145f21754e17c519de13cafc03

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-22 13:57:07.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-22 14:21:12.000000000
Message: 
Patch Set 9: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27086/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27086/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6557/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6557/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19720/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19720/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18682/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18682/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19018/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19018/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17777/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17777/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6619/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6619/ )
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-22 14:21:21.000000000
Message: 
Patch Set 9: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19724/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19724/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27096/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45531/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [59/159]: ep max workload stats...(51 ms) OK


99% tests passed, 3 tests failed out of 427

Total Test time (real) = 674.51 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45531/ )

Failure of GoogleTest "AllBucketTypes/DurabilityActiveStreamTest.SendSetInsteadOfCommitForReconnectWindow/ephemeral_auto_delete":

<pre>
[ RUN      ] AllBucketTypes/DurabilityActiveStreamTest.SendSetInsteadOfCommitForReconnectWindow/ephemeral_auto_delete
unknown file: error: C++ exception with description "KVStoreFactory ctor: Specified dbname "ep_engine_ep_unit_tests.db/test.054501" is not a directory" thrown in SetUp().
unknown file: error: SEH exception with code 0xc0000005 thrown in TearDown().
[  FAILED  ] AllBucketTypes/DurabilityActiveStreamTest.SendSetInsteadOfCommitForReconnectWindow/ephemeral_auto_delete, where GetParam() = "bucket_type=ephemeral:ephemeral_full_policy=auto_delete" (3 ms)
AllBucketTypes/DurabilityActiveStreamTest.SendSetInsteadOfCommitForReconnectWindow/ephemeral_auto_delete
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45531/ )

Timeout of a CTest test 427/427 Test #277: ep_testsuite.full_eviction.comp_active ..................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45531/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38254/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan.h:174:12:
error: no template named "Synchronized" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38254/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16901/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:174:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<RunState> runState;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16901/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:174:12:
error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16901/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6646/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6646/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19026/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-04-22T14:04:46.647Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-22T14:04:46.647Z] Expected equality of these values:
[2022-04-22T14:04:46.647Z]   100
[2022-04-22T14:04:46.647Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-22T14:04:46.647Z]     Which is: 96
[2022-04-22T14:04:46.647Z] vb:0 not fully resident after eviction
[2022-04-22T14:04:46.647Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-22T14:04:46.647Z] Expected equality of these values:
[2022-04-22T14:04:46.647Z]   100
[2022-04-22T14:04:46.647Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-22T14:04:46.647Z]     Which is: 98
[2022-04-22T14:04:46.647Z] vb:1 not fully resident after eviction
[2022-04-22T14:04:46.647Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (506 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19026/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18685/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-04-22T14:02:16.506Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-22T14:02:16.506Z] Expected equality of these values:
[2022-04-22T14:02:16.506Z]   100
[2022-04-22T14:02:16.506Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-22T14:02:16.506Z]     Which is: 95
[2022-04-22T14:02:16.506Z] vb:0 not fully resident after eviction
[2022-04-22T14:02:16.506Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-22T14:02:16.506Z] Expected equality of these values:
[2022-04-22T14:02:16.506Z]   100
[2022-04-22T14:02:16.506Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-22T14:02:16.506Z]     Which is: 97
[2022-04-22T14:02:16.506Z] vb:1 not fully resident after eviction
[2022-04-22T14:02:16.506Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (300 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18685/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15869/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17786/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6560/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
